# ACLS

./: 15 tile map.txt  2dgrid.cpp  2dgrid.h  3dgrid.cpp  3dgrid.h  3dgrid.out  ACLS.cpp  CMakeLists.txt  README.md  astar.cpp  astar.h  environment.h  frontier.cpp  frontier.h  readMap.cpp  readMap.h  smgs.cpp  smgs.h  start_goal_pairs.txt  test_2d_grid.cpp  test_3d_grid.cpp  test_tiles_puzzle.cpp  test_tower_puzzle.cpp  tiles.h  tiles.out  tiles_100_korf.txt  tower.cpp  tower.h
heap/: intrusive_heap.h
include/domains/: 2dgrid.h  3dgrid.h  environment.h  tiles.h  tower.h
include/heap/detail/: intrusive_heap.hpp
include/planners/: ACLS.h  LACLS.h
include/utils/: compares.h
maps/: brc202d.map  den012d.map  empty_map.map  maze512-1-0.map  orz800d.map  random512-10-0.map
src/domains/: 2dgrid.cpp  3dgrid.cpp  tiles.cpp  tower.cpp
src/planners/: ACLS.cpp  LACLS.cpp
src/tests/: test_2d_grid.cpp  test_3d_grid.cpp  test_tiles_puzzle.cpp  test_tower_puzzle.cpp
src/utils/: compares.cpp
